<b>Version 2.4.0:</b><br/><br/>
    &#8226; Tranlate tweets (redirects to website)<br/>
    &#8226; Schedule tweets from the compose window<br/>
    &#8226; Automatically queue tweets to send from the compose window when data connection is established<br/>
    &#8226; Filter in "top tweets" when searching<br/>
    &#8226; Attach pictures from the Talon Pull compose button<br/>
    &#8226; A little better handling of drafts<br/>
    &#8226; Better handling of clicks on the interaction drawer<br/>
    &#8226; Improvements for RTL<br/>
    &#8226; Changed the way that picture links are displayed<br/>
    &#8226; In-line twipple image support<br/>
<br/><br/>

<b>Version 2.3.7:</b><br/><br/>
    &#8226; Disable the send button on tweet viewer until you have typed something<br/>
    &#8226; Move the logout button to the bottom of the drawer<br/>
    &#8226; Fixed the timeline losing its position when you mute something<br/>
    &#8226; Resolve twitpics new urls to display on pictures on timeline<br/>
<br/><br/>

<b>Version 2.3.6:</b><br/><br/>
    &#8226; Hopefully fixed a bug with refresh on startup sometimes causing duplicates<br/>
    &#8226; Fixed problem with muted expressions containing apostrophes<br/>
    &#8226; Reported bug and crash fixes<br/>
<br/><br/>

<b>Version 2.3.5:</b><br/><br/>
    &#8226; Fixed the custom notification sounds<br/>
    &#8226; Crash fixes<br/>
<br/><br/>

<b>Version 2.3.4:</b><br/><br/>
    &#8226; Random bug fixes for release<br/>
<br/><br/>

<b>Version 2.3.3:</b><br/><br/>
    &#8226; Clear the TeslaUnread badges correctly<br/>
    &#8226; Don't notify you of a mention from a muted user<br/>
    &#8226; Light tweaks for Talon Pull and Tweetmarker<br/>
    &#8226; Other small fixes<br/>
    &#8226; Crash fixes<br/>
<br/><br/>

<b>Version 2.3.2:</b><br/><br/>
    &#8226; TeslaUnread for homescreen unread badges<br/>
    &#8226; Small random bug fixes<br/>
<br/><br/>

<b>Version 2.3.1:</b><br/><br/>