@@ -6,7 +6,6 @@
     - tweetmarker in lists
     - rotation on tweet viewer
     - identify conversations from timeline
-    - view multiple picture on a tweet
     - directly share photos instead of saving then sharing
 
 - Bugs:
@@ -20,8 +19,13 @@
 -- For Release --
 
     - direct messages with pictures from the twitter app
-    - can't research from the search page
+    - can't re-search from the search page
     - put quotes around searched hashtags
+    - view multiple picture on a tweet (needs tested)
+    - 32 and 34 dp text sizes
+    - delay removal of the send notification to make sure it is cleared every time
+    - duplicate followers and following with low numbers
+    - change webview background to white after 85% or 90%
 
     Version 2.5.0
         - auto-complete hashtags
